mariadb-phppot-event.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-internal-service
  namespace: staging
  labels:
    app: mariadb
spec:
  selector:
    app: mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
