phppot-event.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phppot-event
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-frontend
  template:
    metadata:
      labels:
        app: event-frontend
    spec:
      securityContext:
        runAsUser: 0
      containers:
      - name: event-php
#        image: anooprs471/phppot-event:<TAG>
        image: anooprs471/phppot-event-php-server
        ports:
          - name: httpport
            containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: event-web
  namespace: staging
  labels:
    app: event-frontend
spec:
  type: ClusterIP
  ports:
    - name: event-frontend
      port: 80
      protocol: TCP
  selector:
    app: event-frontend
